src/styles/Landing.css
section {
  position: relative;
  width: 100%;
  min-height: calc(100vh - 4rem);
  padding: calc(1.5 * var(--mg-l)) var(--mg-l);
  display: flex;
  flex-direction: column;
}

@media screen and (min-width: 768px) {
  section {
    min-height: calc(100vh - 6rem);
    padding: var(--mg-l);
  }
}

.home {
  justify-content: space-between;
  padding-bottom: 0;
  padding-right: 0;
}

.content-col {
  display: flex;
  flex-direction: column;
  padding-right: var(--mg-l);
}

.content {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
}

.content h2 {
  font-size: 1.5rem;
  margin: 0.5rem 0;
  font-weight: 600;
}

.content h3 {
  font-size: 1.25rem;
  margin: 0.5rem 0;
  font-weight: 500;
}

.get-started {
  margin: 2rem 0;
}

.app-links {
  display: none;
}

.app-link {
  height: 2.5rem;
  margin: calc(0.5 * var(--mg-l));
  margin-left: 0;
}

.app-link img {
  height: 100%;
  width: auto;
}

.landing-hero {
  width: 80%;
  max-width: 25rem;
  margin-left: auto;
  display: flex;
}

.landing-hero img {
  width: 100%;
  justify-self: flex-end;
  align-self: flex-end;
}

@media screen and (min-width: 768px) {
  .content h2 {
    font-size: 2.5rem;
    margin: 1rem 0;
  }

  .content h3 {
    font-size: 1.75rem;
  }

  .landing-hero {
    width: 60%;
    max-width: 32.5rem;
    margin-left: auto;
  }

  .app-link {
    height: 3.5rem;
  }
}

@media screen and (min-width: 1200px) {
  .home {
    flex-direction: row;
  }

  .content-col {
    width: 100%;
    flex-direction: column;
    justify-content: space-between;
  }

  .content h2 {
    font-size: 2.75rem;
    margin: 1rem 0;
  }

  .content h3 {
    font-size: 2rem;
  }

  .landing-hero {
    width: 80%;
    max-width: 1000px;
    margin-left: auto;
  }

  .landing-hero img {
    height: 100%;
  }

  .app-links {
    display: flex;
  }
}

